Add extension requirements to composer

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,9 @@
         "psr-4": {
             "Kameli\\NummerpladeApi\\": "/"
         }
-    }
+    },
+  "require": {
+    "ext-curl": "*",
+    "ext-json": "*"
+  }
 }
